Opened 4 months ago
Closed 3 months ago
#19244 closed bug (fixed)
Screen preflet fails to start
Reported by: | monni | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta6 |
Component: | Preferences/Screen | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
debug_server: Thread 10457 entered the debugger: General protection fault stack trace, current PC 0xe7b6cba880 </boot/system/lib/libbe.so> _ZNK9BMenuItem9IsEnabledEv + 0: (0x7fffc29df910) 0xc3d05cb7ad </boot/system/preferences/Screen> _ZN12ScreenWindow15_UpdateControlsEv + 0xdd (0x7fffc29df960) 0xc3d05ce76b </boot/system/preferences/Screen> _ZN12ScreenWindowC1EP14ScreenSettings + 0x219b (0x7fffc29dfc80) 0xc3d05c8ef5 </boot/system/preferences/Screen> _ZN17ScreenApplicationC1Ev + 0x55 (0x7fffc29dfcb0) 0xc3d05c6a2d </boot/system/preferences/Screen> main + 0x1d (0x7fffc29dfe50) 0xc3d05c6cee </boot/system/preferences/Screen> _start + 0x3e (0x7fffc29dfe80) 0xd0d980de95 </boot/system/runtime_loader> runtime_loader + 0x115
Change History (3)
comment:1 by , 4 months ago
comment:3 by , 3 months ago
Milestone: | Unscheduled → R1/beta6 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Fix merged in hrev58315.
Note:
See TracTickets
for help on using tickets.
I can't reproduce, this following change could help however: https://review.haiku-os.org/c/haiku/+/8558